# cloakbrowser-human

./: .gitignore  LICENSE  README.md  test_human.mjs  test_human.py  test_robot.mjs
assets/: .gitkeep
js/: package-lock.json  package.json  tsconfig.json
js/src/: config.ts  index.ts  keyboard.ts  mouse.ts  scroll.ts
python/: pyproject.toml
python/cloakbrowser_human/: __init__.py  config.py  keyboard.py  mouse.py  scroll.py
