[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloakbrowser-human"
version = "0.1.0"
description = "Human-like mouse, keyboard, and scroll for CloakBrowser. Drop-in Playwright wrapper that defeats behavioral bot detection."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "evelaa123"},
]
keywords = [
    "cloakbrowser", "human", "mouse", "keyboard", "scroll", "stealth",
    "playwright", "anti-detect", "bot-detection", "behavioral",
    "fingerprint", "automation", "humanize", "bezier",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "cloakbrowser>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/evelaa123/cloakbrowser-human"
Repository = "https://github.com/evelaa123/cloakbrowser-human"
Issues = "https://github.com/evelaa123/cloakbrowser-human/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloakbrowser_human*"]
